other-cel/limit-hostpath-vols/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: limit-hostpath-vols
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
